src-ken&y/objects/Routing__c.object
<CustomObject>
    <customHelpPage>HelpWorkOrder</customHelpPage>
    <description>Routing Detail object:  contains the detailed operations required to make an Assembly</description>
    <fields>
        <fullName>Assembly_Item_Specification_Sequence__c</fullName>
        <description>Hidden field for uniqueness of Assembly Item Specification + Sequence</description>
        <label>Assembly Item Specification + Sequence</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assembly_Item_Specification__c</fullName>
        <description>Routing for this assembly</description>
        <inlineHelpText>Routing for this assembly</inlineHelpText>
        <label>Assembly Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assembly_Revision__c</fullName>
        <description>Assembly Item Specification&apos;s Revision</description>
        <formula>Assembly_Item_Specification__r.Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assembly item specification&apos;s revision</inlineHelpText>
        <label>Assembly Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Backflush_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked time is backflushed</description>
        <inlineHelpText>If checked time is backflushed</inlineHelpText>
        <label>Backflush Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company this routing belongs to</description>
        <inlineHelpText>Company this routing belongs to. After a routing has been created, you cannot change the company.</inlineHelpText>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked hours at this operation sequence, if backflushed, are not quantity dependent.</description>
        <inlineHelpText>If checked hours at this operation sequence, if backflushed, are not quantity dependent.</inlineHelpText>
        <label>Fixed Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes about this sequence</description>
        <inlineHelpText>Notes about this sequence</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Sequence__c</fullName>
        <description>Operations sequence in this routing</description>
        <inlineHelpText>Operations sequence in this routing</inlineHelpText>
        <label>Operation Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation code associated with this routing operation</description>
        <inlineHelpText>Operation code associated with this routing operation</inlineHelpText>
        <label>Operation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of Resource needed at this operation</description>
        <inlineHelpText>Quantity of Resource needed at this operation</inlineHelpText>
        <label>Resource Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Sequence__c</fullName>
        <description>Resource&apos;s sequence in this operation</description>
        <inlineHelpText>Resource&apos;s sequence in this operation</inlineHelpText>
        <label>Resource Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this resource is scheduled</description>
        <inlineHelpText>Checked if this resource is scheduled</inlineHelpText>
        <label>Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Hours__c</fullName>
        <description>Standard hours at for this resource</description>
        <inlineHelpText>Standard hours at for this resource</inlineHelpText>
        <label>Standard Hours</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Center_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Center Resource</description>
        <inlineHelpText>Lookup to Work Center Resource</inlineHelpText>
        <label>Work Center Resource</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Work center resource&apos;s work center must match routing&apos;s work center</errorMessage>
            <filterItems>
                <field>Work_Center_Resource__c.Work_Center__c</field>
                <operation>equals</operation>
                <valueField>$Source.Work_Center__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Center_Resource__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Center for this operation</description>
        <inlineHelpText>Work center used for this operation</inlineHelpText>
        <label>Work Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Work center&apos;s company must match routing&apos;s company</errorMessage>
            <filterItems>
                <field>Work_Center__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Center__c</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Routing</label>
    <nameField>
        <label>Routing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Company_must_match</fullName>
        <active>true</active>
        <errorConditionFormula>Assembly_Item_Specification__r.Company__c  !=  Company__c</errorConditionFormula>
        <errorMessage>Routing Company must match Item Specification Company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fixed_and_backflushed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Backflush_Resource__c == false,  Fixed_Hours__c == true)</errorConditionFormula>
        <errorDisplayField>Fixed_Hours__c</errorDisplayField>
        <errorMessage>Fixed Hours can only be checked if Backflush Resource is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Resource_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Resource_Quantity__c &lt; 0.0</errorConditionFormula>
        <errorDisplayField>Resource_Quantity__c</errorDisplayField>
        <errorMessage>Resource quantity cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Standard_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>Standard_Hours__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Standard_Hours__c</errorDisplayField>
        <errorMessage>Standard hours cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>